Fix of header controls on IE

--- a/css/styles.css
+++ b/css/styles.css
@@ -474,6 +474,14 @@ html {
   margin: 0 0.5rem;
 }
 
+.l-header__ctrl {
+  display: block;
+  flex-basis: 60px;
+  flex-grow: 1;
+  text-align: center;
+  white-space: nowrap;
+}
+
 .is-mobile {
   display: none;
 }
@@ -837,9 +845,6 @@ html {
 
   .l-header__ctrl {
     display: block;
-    flex-basis: 0px;
-    flex-grow: 1;
-    text-align: center;
   }
 
   .l-header__logo {
